# torch7-distro

./: CMakeLists.txt
cmake/: TorchCFlags.cmake  TorchLua2exe.cmake  TorchPaths.cmake  TorchPathsInit.cmake
cmake/lua2exe/: lua2exe.c  lua2exe.lua
exe/: CMakeLists.txt
exe/lua/: CMakeLists.txt
exe/luajit/: CMakeLists.txt
exe/luarocks/: CMakeLists.txt
exe/luarocks/src/luarocks/: config.lua.win.in  site_config.lua.in
exe/torch-exe/: CMakeLists.txt  torch-exe.lua.in
rocks/compat/rocks/: compat-scm-1.rockspec
rocks/cutorch/: CMakeLists.txt
rocks/dok/: init.lua  inline.lua
rocks/dok/dokinstall/: index.md
rocks/dok/rocks/: dok-scm-1.rockspec
rocks/paths/: CMakeLists.txt
rocks/paths/rocks/: paths-scm-1.rockspec
